--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GCP_PROJECT_ID=your-gcp-project-id
+GCP_PROJECT_ID=your-project-id
 GCP_REGION=us-central1
+GOOGLE_APPLICATION_CREDENTIALS=./firebase/service_account.json
+TWITTER_BEARER_TOKEN=your-secret-token-here
