--- a/turbo.json
+++ b/turbo.json
@@ -1,4 +1,7 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "pipeline": {}
+  "pipeline": {
+    "api-gateway": ["orchestrator"],
+    "orchestrator": ["intent_extractor", "tool_caller", "rag_search", "llm_response"]
+  }
 }
