--- a/.env
+++ b/.env
@@ -1,4 +1,31 @@
-GCP_PROJECT_ID=your-project-id
+# === Google Cloud Project Settings ===
+GCP_PROJECT_ID=your-gcp-project-id
 GCP_REGION=us-central1
-GOOGLE_APPLICATION_CREDENTIALS=./firebase/service_account.json
-TWITTER_BEARER_TOKEN=your-secret-token-here
+
+# Path to your service account key (used by Google Cloud SDKs)
+GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+
+# === Twitter API ===
+TWITTER_BEARER_TOKEN=your_twitter_bearer_token
+
+# === Reddit Scraper ===
+REDDIT_SUBREDDITS=bangalore,bengaluru
+
+# === Firestore Collection ===
+FIREBASE_COLLECTION_NAME=city_reports
+
+# === Defaults for fallback & inference ===
+DEFAULT_LOCATION=Bengaluru
+DEFAULT_INTENT=general_update
+DEFAULT_TOPIC=city_event
+
+# === Optional Vertex AI Model Config ===
+GENAI_MODEL=generation-model-gemini-pro
+GENAI_TEMPERATURE=0.4
+GENAI_TOP_K=40
+GENAI_TOP_P=0.95
+
+# === Other App Configs ===
+MAX_REDDIT_RESULTS=5
+MAX_TWITTER_RESULTS=5
+MAX_FIRESTORE_RESULTS=5
