--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ python-multipart~=0.0.6
 
 # News API client
 newsapi-python~=0.2.6
+
+
+google-cloud-texttospeech
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+vertexai
