--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,11 @@ python-multipart~=0.0.6
 # News API client
 newsapi-python~=0.2.6
 
+# Image processing and file handling
+Pillow~=10.0.0
+python-multipart~=0.0.6
 
+# Google Cloud and AI Platform
 google-cloud-texttospeech
 google-auth
 google-auth-oauthlib
