--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,15 @@ google-cloud-aiplatform[evaluation,agent-engines]~=1.103.0
 # Environment and configuration
 python-dotenv~=1.0.0
 
-# FastAPI web framework
-fastapi~=0.104.0
-uvicorn[standard]~=0.24.0
-pydantic~=2.5.0
+# FastAPI web framework - updated to be compatible with google-adk
+fastapi>=0.115.0
+uvicorn>=0.34.0
+pydantic>=2.11.1,<3.0.0
 python-multipart~=0.0.6
+httpx>=0.24.0
 
 # News API client
 newsapi-python~=0.2.6
-
 
 google-cloud-texttospeech
 google-auth
