--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -41,6 +41,7 @@
     "@vis.gl/react-google-maps": "^1.5.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
+    "build": "^0.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
